fix: mobile panel fade mask for nav and footer overlap

--- a/css/panels.css
+++ b/css/panels.css
@@ -608,14 +608,14 @@
 -webkit-mask-image: linear-gradient(
   to bottom,
   transparent 0px,
-  black 90px,
+  black 140px,
   black calc(100% - 60px),
   transparent 100%
 );
 mask-image: linear-gradient(
   to bottom,
   transparent 0px,
-  black 90px,
+  black 140px,
   black calc(100% - 60px),
   transparent 100%
 );
